# OpenGL_Framework

./: .clang_complete  .gitignore  README.en.md  README.md  README_Forschungspraktikum.md
BUILD_Sublime/: CMakeCache.txt  Makefile  OpenGLProject.sublime-project  OpenGLProject.sublime-workspace  cmake_install.cmake
BUILD_Sublime/executables/test_multipass/: Makefile  cmake_install.cmake  test_multipass.sublime-project
BUILD_Sublime/executables/test_shader_program/: Makefile  cmake_install.cmake  test_shader_program.sublime-project
BUILD_Sublime/libraries/ShaderTools/: Makefile  ShaderTools.sublime-project  cmake_install.cmake
BUILD_Sublime/libraries/shader_program/: Makefile  cmake_install.cmake  shader_program.sublime-project
BUILD_Sublime/shaders/: Makefile  SHADERS.sublime-project  cmake_install.cmake
resources/: BUTT_M.3DS  Grass_01.mtl  Grass_03.mtl  House1Upload.mtl  MedievalHouse1.mtl  ROCK.tga  SphereMat.mtl  Thumbs.db  Tree.mtl  WoodHouse.mtl  butterfly.mtl  casaMedieval.mtl  castle.mtl  castle01.mtl  dempls.mtl  hemlock.3ds  lowPolyHouse.mtl  moving.txt  pig.mtl  roof.tga  sfere1.mtl  smaug.mtl  terra.mtl  trees lo-poly.mtl  trees lo-poly.mtl~  viking_01.mtl  wall.tga  well.mtl  windmill02.mtl
resources/dae/: cornell-box.dae  lee-perry-smith-head.dae
src/: CMakeLists.txt
src/cmake/: DefaultExecutable.cmake  DefaultLibrary.cmake  DefaultProject.cmake  FindASSIMP.cmake  FindDevIL.cmake  FindGLEW.cmake  FindGLFW3.cmake  FindGLM.cmake  FindGTK3.cmake  FindGTK3_own.cmake  FindKinectSDK.cmake  FindLeapSDK.cmake  FindOculusSDK.cmake  FindOpenGL3.cmake  LinkASSIMP.cmake  LinkBoost.cmake  LinkDevIL.cmake  LinkGLEW.cmake  LinkGLFW3.cmake  LinkGLM.cmake  LinkGTK3.cmake  LinkKinectSDK.cmake  LinkLeapSDK.cmake  LinkOculusSDK.cmake  LinkOpenGL.cmake  LinkOpenGL3.cmake  LinkZLIB.cmake  gdb_prettyprinter.py  macros.cmake
src/cmake/.svn/: wc.db
src/executables/Compute_Shader_Basti/: test.cpp
src/executables/Copy of Test_Compression/: dctTest.cpp
src/executables/Game/: game.cpp  game.h  game.h~  szene.h~
src/executables/Game_Desktop/: CMakeLists.txt  GameDesktop.cpp  GameDesktop.h
src/executables/Game_Oculus/: CMakeLists.txt  CMakeLists.txt~  (+6 more)
src/executables/Stream/: CMakeLists.txt  main.cpp
src/executables/demo_oculus_ivanna/: CMakeLists.txt  demo_oculus.cpp  demo_oculus.h
src/shaders/: CMakeLists.txt  test.vert
(+376 files in other folders)
